--- a/src/star.css
+++ b/src/star.css
@@ -45,11 +45,10 @@ box-shadow: 0px 0px 33px 3px rgba(255,255,255,1);
   }
   
   .star-container {
-    position: fixed; /* or 'absolute' */
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Places the stars behind other elements */
-    /* Other styles for stars */
+    z-index: -1; 
 }
